--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "loadash": "^1.0.0",
     "mongoose": "^6.11.1"
   }
 }
